# ticket_bot

./: .env.example  .gitignore  app.py  main.py  pyproject.toml
api/: variables.py
core/: enums.py
db/: engine.py  models.py
src/: main.py
src/api/: webhook.py
src/core/: callbacks.py  config.py  conversation.py  decorators.py  dispatcher.py  enums.py  lifespan.py  logger.py  models.py  router.py  ticket_service.py
src/core/handlers/: __init__.py  device_handlers.py  menu_handlers.py  ticket_handlers.py  user_handlers.py  writeoff_handlers.py
src/db/: __init__.py  engine.py  models.py  schemas.py  seed.py
src/tg/: models.py
