[project]
name = "ticket-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "requests>=2.32.3",
    "types-requests>=2.32.0.20250328",
]
