[project]
name = "ticket-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio,mypy]>=2.0.40",
]

[dependency-groups]
dev = ["requests>=2.32.3", "types-requests>=2.32.0.20250328"]

[tool.mypy]
plugins = ["pydantic.mypy"]

# follow_imports = "silent"
# warn_redundant_casts = false
# warn_unused_ignores = false
# disallow_any_generics = true
# no_implicit_reexport = true
# disallow_untyped_defs = true

[tool.pydantic-mypy]
# init_forbid_extra = true
# init_typed = true
# warn_required_dynamic_aliases = false
